--- a/AgriBook/AgriBook/views/partials/parcelModal.html
+++ b/AgriBook/AgriBook/views/partials/parcelModal.html
@@ -48,12 +48,12 @@
                     <div class="form-group col-xs-6">
                         <label class="control-label">Količina u kg:</label>
                         <input type="text" class="form-control" id="input10" placeholder="Unesite količinu" data-ng-model="pc.Quantity" ng-init="pc.Quantity = initializeExistingCropQuantity()">
-                        <p data-ng-show="pc.Quantity==''" style="color: red">Unesite količinu</p>
                     </div>
                     <div>
-                        <input type="hidden" data-ng-model="pc.AmountId" ng-init="pc.AmountId = initializeExistingCropAmountId()" />
+                        <input type="hidden" data-ng-model="pc.AmountId" ng-init="pc.AmountId = initializeExistingCropAmountId()"/>
                     </div>
                 </div>
+                <p data-ng-show="showCropErrorMessage" style="color: red">Odaberite sjeme</p>
                 <div class="row margin-add-new">
                     <div class="col-md-12">
                         <a href="" data-ng-click="openCropsModal()">
