--- a/AgriBook/AgriBook/views/parcels.html
+++ b/AgriBook/AgriBook/views/parcels.html
@@ -66,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-            <svg id="svg-id" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 499.39 298.75">
+            <svg id="svg-id" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 499.39 298.75" style="margin-top: -30px;">
                 <defs>
                     <style>
                         .cls-1 {
